--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Latihan Git</title>
   </head>
+
   <body>
+    <header>ini adalah header</header>
+
     <h1>PT Maju Sejahtera</h1>
+
     <div>Lorem ipsum dolor sit amet</div>
+
+    <footer>ini adalah footer</footer>
   </body>
 </html>
